Banner Image & Banner Button Alignment Problem is Solved

--- a/styles/portfolio-main.css
+++ b/styles/portfolio-main.css
@@ -41,6 +41,7 @@ section {
 /* Header & navigation styles */
 .header {
     background-color: #FFF8F3;
+    /* New Rule, New Learning */
     background-image: url(../images/header_bg.png), url(../images/developer.png);
     background-repeat: no-repeat;
     background-position: bottom right, bottom left;
@@ -74,20 +75,27 @@ nav li {
 
 /* Banner Styles */
 .banner {
+    /* Previous Wrong Code for alignment error of button and image of Hardy
     margin: 0 200px;
     display: flex;
     align-items: center;
+    justify-content: space-between; */
+    display: flex;
+    justify-content: space-between;
+    margin: 0 30px 0 120px;
+    align-items: center;
+    gap: 100px;
 }
 
 .banner-title {
     color: #181818;
     font-weight: 700;
-    font-size: 60px;
+    font-size: 50px;
     margin-bottom: 20px;
 }
 
 .banner-subtitle {
-    font-size: 45px;
+    font-size: 35px;
     font-weight: 600;
     color: #474747;
     margin-bottom: 5px;
